# Real

./: .editorconfig  CMakeLists.txt
Benchmarks/: GMP.json  MPFR.json  NTL.json  Real_new.json  Real_old.json  benchmark_MPFR.cpp  benchmark_NTL.cpp  benchmark_gmp.cpp  benchmark_iRRAM.cpp  benchmark_mpdecimal.cpp  benchmark_real.cpp  benchmark_realLib.cpp  change_iRRAM.js  iRRAM.json  iRRAM_unprocessed.json  index.html  index.js  mpDecimal.json  readMe.txt  realLib.json
Benchmarks/iRRAM_FUNCTIONS/: BM_add_int.cpp  BM_add_real.cpp  BM_cos.cpp  BM_divide_int.cpp  BM_divide_real.cpp  BM_exp.cpp  BM_log.cpp  BM_multiply_int.cpp  BM_multiply_real.cpp  BM_overhead.cpp  BM_power.cpp  BM_sin.cpp  BM_sqrt.cpp  BM_tan.cpp
Benchmarks/include/: helper.hpp
include/real/: convenience.hpp  exact_number.hpp  irrational_helpers.hpp  irrationals.hpp  real.hpp  real_data.hpp  real_exception.hpp  real_math.hpp  real_operation.hpp  real_optimization_data.hpp
test/: real_irrational_test.cpp  real_math_test.cpp  real_optimization_test.cpp
